--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Manipulation With Java Script</title>
-    <link rel="stylesheet" href="index.js">
+    <link rel="stylesheet" href="index.mjs">
 </head>
 <body>
     <h1>Data Manipulation With Java Script</h1>
